    * 0949 quicksearch: now able to search for multiple hosts at once...
    * 1052 SEC: index start URL can not be used to redirect to absolute URLs anymore...
    * 1085 quicksearch: multiple hostname matches now lead to the searchhost view instead of the hosts view...
    * 1047 Virtual Host Tree: Allow to use topic as tree level...
    * 0945 FIX: Sidebar snapin "Problem hosts": Now excludes hosts and services in downtime
    * 1036 FIX: doc/treasures/downtime: fix --url option, better error output
    * 1074 FIX: Fix Virtual Host Tree snapin...
    * 1059 FIX: LDAP: Using configured user filter during login to prevent temporary created users...
    * 1060 FIX: Fixed exception during first login of a user when saving of access times is enabled...

    WATO:
    * 0825 WATO: Hover menu of user online state shows the last seen date/time now
    * 1057 WATO folder permissions are only exported to NagVis when configured...
    * 1086 check_http: now able to enter non-ascii signs in "Send HTTP POST data" rule...
    * 0990 FIX: Fix HTTP error handling in bulk inventory...
    * 1004 FIX: Fix exception when saving rules, caused by empty item
    * 0947 FIX: WATO snapshots: fixed missing files on restoring nagvis backup domains
    * 0826 FIX: Fixed problem where user access times were not updated correctly
    * 1044 FIX: Remove icon for service parameters in WATO service list for missing services...
    * 1056 FIX: Fixed selection of hosts for bulk actions

    Notifications:
    * 1042 Rule based notifications: allow matching on host groups...
    * 0828 FIX: Mails sent with mail/asciimail plugin now really set the from address
    * 1061 FIX: SMS notifications: correctly handling spaces in phone numbers...

    Reporting & Availability:
    * 0991 FIX: Availability: optionally show time stamps as UNIX epoch time...

    Event Console:
    * 1040 FIX: Avoid sporadic errors when checking event state in Event Console...

    Livestatus: