@@ -249,7 +249,7 @@ def git_commit(werk, custom_files):
             if prefix:
                 title = "%s %s" % (prefix, title)
 
-    title = werk["id"] + " " + title
+    title = "%d %s" % (werk['id'], title)
 
     if custom_files:
         files_to_commit = custom_files
