@@ -81,6 +81,8 @@
     * 1052 SEC: index start URL can not be used to redirect to absolute URLs anymore...
     * 1085 quicksearch: multiple hostname matches now lead to the searchhost view instead of the hosts view...
     * 1047 Virtual Host Tree: Allow to use topic as tree level...
+    * 1062 SEC: Fixed several XSS issues on different pages...
+    * 1063 SEC: Fixed several XSS issues on different pages...
     * 0945 FIX: Sidebar snapin "Problem hosts": Now excludes hosts and services in downtime
     * 1036 FIX: doc/treasures/downtime: fix --url option, better error output
     * 1074 FIX: Fix Virtual Host Tree snapin...
